TECH-428: fixed blurry text on ModalDialog

--- a/src/Component/Notification/NotificationCard.scss
+++ b/src/Component/Notification/NotificationCard.scss
@@ -79,7 +79,7 @@
       }
 
       .timestamp {
-        color: #cdcdcd;
+        color: rgba(255, 255, 255, .7);
         font-size: 0.825em;
         margin-left: auto;
       }
